# KrakenUART

./: .gitignore  CMakeLists.txt  Doxyfile  TODO.txt  main.cpp  raspi  rmi.hpp
docs/markdown/: main.md  serialization.md
shared/: CMakeLists.txt  messages.cpp  messages.hpp  primitives.cpp  primitives.hpp  protocol.hpp  states.cpp  states.hpp  utils.cpp
shared/headers/: base128.hpp  message_identification.hpp  messages.hpp  msg_ids.hpp  primitive_stream.hpp  primitives.hpp  protocol.hpp  protocol_states.hpp  rmi.hpp  serial.hpp  states.hpp  utils.hpp
shared/sources/: .states.cpp.swp  base128.cpp  message_identification.cpp  messages.cpp  primitive_stream.cpp  primitives.cpp  serial.cpp  states.cpp  states.tcc  utils.cpp
shared/sources/states/: CMakeLists.txt  error.cpp  idle.cpp  ignore_n.cpp  protocol_states.cpp  reading_body.cpp  reading_header.cpp  reading_trailing.cpp  test.cpp  waiting_ack.cpp  waiting_body_ack.cpp  waiting_for_response.cpp  waiting_header_ack.cpp
shared/states/: CMakeLists.txt  reading_header.cpp
